# bevy_rpg_game

./: Cargo.toml
assets/data/: ability.ron
assets/maps/: test.ldtk
assets/maps/world/: .world  map_x-1_y-1.tmx  map_x-2_y-1.tmx  map_x_y.tmx  tileset.tsx
assets/save/: save.ron
src/: main.rs  utils.rs
src/components/: bullet.rs  lifespan.rs  mod.rs
src/events/: mod.rs
src/plugins/: animation.rs  area.rs  blocker.rs  chest.rs  damage.rs  editor.rs  fox.rs  game_world.rs  hit.rs  hook.rs  interaction.rs  item.rs  knockback.rs  mod.rs  movement.rs  player.rs  reset_point.rs  rock.rs  save.rs  shop.rs  spatial_map.rs  spider.rs  team.rs  tile_map.rs  tiled_asset.rs  trigger.rs  unit.rs  unit_action.rs  unit_state.rs  visual_effect.rs  wolf.rs
src/plugins/actions/: action.rs  attack.rs  attack_aura.rs  base.rs  burning.rs  burst_fire.rs  dead.rs  dead_finger.rs  forbidden_array.rs  ghost_light.rs  heal_aura.rs  hook.rs  ice_spear.rs  idle.rs  mod.rs  move_to.rs  setting.rs  skill_id.rs  slash.rs  spawn_attack.rs  spider_attack.rs  stab.rs  stop.rs  stun.rs  wolf_attack.rs
src/plugins/game_world/: mod.rs  world_cache.rs
src/plugins/ldtk/: components.rs  entities.rs  systems.rs
src/plugins/rogue/: mod.rs  rogue.rs  shop.rs
src/plugins/scene_editor/: editor.rs  editor_component.rs  mod.rs  scene_loader.rs
src/plugins/units/: buff.rs  hp_text.rs  mod.rs  unit.rs  unit_action.rs  unit_command.rs  unit_state.rs
src/res/: mod.rs
src/states/: esc_menu.rs  level.rs  mod.rs  title.rs
src/systems/: debug.rs  game.rs  mod.rs
(+44 files in other folders)
