[package]
name = "bevy_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_egui = "0.16"
bevy-inspector-egui = "0.12"
bevy-inspector-egui-rapier = { version = "0.5", features = ["rapier2d"] }
bevy_rapier2d = { version = "0.16", features = [ "simd-stable", "debug-render" ] }
# bevy_ecs_ldtk = "0.2"
# bevy_ecs_tilemap = "0.5.0"
bevy_simple_tilemap = "0.9"

ron = "0.7"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
tiled = "0.10.2"
anyhow = { version = "1.0" }
regex = "1.6.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev.package."*"]
opt-level = 3